# mycelium

./: .env.example  .gitignore  CLAUDE.md  README.md  index.ts  mycelium-0.1.0.tgz  mycelium.config.ts  package-lock.json  package.json  server.ts  tsconfig.build.json  tsconfig.json
.mycelium/: amazon.com.json  booking.com.json  linkedin.com.json  reddit.com.json  x.com.json
cli/: clear.ts  history.ts  index.ts  replay.ts  run.ts  stats.ts
core/: mock.ts  prime.ts  recorder.ts  runner.ts
examples/: basic-sdk.ts
js/: README.md  index.ts  load-env.ts  mycelium.config.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
js/.bench/: results-2026-05-05T01-40-49-492Z.json
js/.mycelium/: amazon.com.json  linkedin.com.json  store.db  store.db-shm  store.db-wal
js/adapters/: browserbase.ts  playwright.ts  tinyfish.ts  types.ts
js/analyzer/: classifier.ts
js/bench/: run-benchmark.ts  tasks.json
js/cli/: clear.ts  index.ts  inspect.ts  replay.ts  stats.ts
js/core/: prime.ts  recorder.ts  runner.ts
js/demo/: run-demo.ts
js/examples/: advanced-sdk.ts  basic-cli.sh  basic-sdk.ts  batch-tasks.json  browserbase-sdk.ts  custom-agent-handler.ts  playwright-sdk.ts
js/explorer/: server.ts
js/store/: types.ts
js/test/: adapters.test.ts
js/tools/: batch.ts  history.ts  index.ts  run.ts
mycelium-py/: README.md  pyproject.toml
mycelium-py/src/mycelium/: __init__.py  config.py  recorder.py  store.py  types.py
public/: index.html
python/examples/: advanced_sdk.py  basic_sdk.py  (+1 more)
server/: server.ts
store/: reader.ts  types.ts  writer.ts
(+15 files in other folders)
