[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycelium-sdk"
version = "0.1.0"
description = "Self-improving memory layer for TinyFish web agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mycelium" }]
dependencies = [
    "httpx>=0.27",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/vangmay/mycelium"

[tool.hatch.build.targets.wheel]
packages = ["src/mycelium"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
